<resources>
    <string name="app_name">Кофейня</string>
    
    <!-- Главное меню -->
    <string name="menu_home">Главная</string>
    <string name="menu_coffee">Меню кофе</string>
    <string name="menu_cart">Корзина</string>
    <string name="menu_about">О программе</string>
    <string name="menu_instruction">Инструкция пользователю</string>
    <string name="menu_author">Об авторе</string>
    <string name="menu_settings">Настройки</string>
    
    <!-- Авторизация -->
    <string name="login">Вход</string>
    <string name="logout">Выход</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="login_error">Неверный логин или пароль</string>
    
    <!-- Роли пользователей -->
    <string name="role_admin">Администратор</string>
    <string name="role_user">Пользователь</string>
    
    <!-- Главная страница -->
    <string name="welcome_title">Добро пожаловать в кофейню!</string>
    <string name="welcome_subtitle">Выберите ваш любимый кофе</string>
    
    <!-- Меню кофе -->
    <string name="coffee_menu_title">Наше меню</string>
    <string name="coffee_price">Цена: %1$s ₽</string>
    <string name="coffee_description">Описание: %1$s</string>
    
    <!-- О программе -->
    <string name="about_title">О программе</string>
    <string name="about_description">Мобильное приложение для кофейни\n\nВерсия: 1.0\nДата разработки: 2025\n\nПриложение позволяет просматривать меню кофе, управлять заказами и получать информацию о кофейне.</string>
    
    <!-- Инструкция пользователю -->
    <string name="instruction_title">Инструкция пользователю</string>
    <string name="instruction_content">Добро пожаловать в мобильное приложение кофейни! Это руководство поможет вам быстро освоить все функции приложения.\n\nПриложение предназначено для удобного просмотра меню кофе, управления заказами.</string>
    <string name="instruction_steps">1. Авторизация: Введите логин и пароль для входа в систему\n2. Просмотр меню: Изучите доступные напитки и десерты\n3. Добавление в корзину: Нажмите на цену товара для добавления или добавьте его через детальное описание товара\n4. Управление корзиной: Изменяйте количество или удаляйте товары\n5. Оформление заказа: Нажмите \"Оформить заказ\" для завершения покупки</string>
    <!-- Об авторе -->
    <string name="author_title">Об авторе</string>
    <string name="author_name">Кирилл</string>
    <string name="author_group">Группа: ИКБО-26-22</string>
    <string name="author_year">Год разработки: 2025</string>
    <string name="author_email">kirill.kipr@gmail.com</string>
    <string name="author_description">Студент направления \"Информационные технологии\". Разработка данного приложения выполнена в рамках учебного проекта по дисциплине \"Мобильная разработка\". Приложение демонстрирует навыки работы с Android SDK, Room Database и Material Design.</string>
    
    <!-- Корзина -->
    <string name="cart_title">Корзина</string>
    <string name="cart_empty">Корзина пуста</string>
    <string name="cart_empty_description">Добавьте товары из меню кофе</string>
    <string name="cart_total">Итого:</string>
    <string name="checkout">Оформить заказ</string>
    <string name="remove">Удалить</string>
    
    <!-- Общие -->
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="add">Добавить</string>
    <string name="loading">Загрузка...</string>
    <string name="error">Ошибка</string>
    <string name="success">Успешно</string>
    
    
</resources>