<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <!-- Главный экран -->
    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.coffeeshop.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_coffee_menu"
            app:destination="@id/CoffeeMenuFragment" />

        <action
            android:id="@+id/action_home_to_cart"
            app:destination="@id/CartFragment" />

        <action
            android:id="@+id/action_home_to_about"
            app:destination="@id/AboutFragment" />

    </fragment>

    <!-- Меню кофе -->
    <fragment
        android:id="@+id/CoffeeMenuFragment"
        android:name="com.example.coffeeshop.fragments.CoffeeMenuFragment"
        android:label="@string/menu_coffee"
        tools:layout="@layout/fragment_coffee_menu">

        <action
            android:id="@+id/action_coffee_menu_to_home"
            app:destination="@id/HomeFragment" />

        <action
            android:id="@+id/action_coffee_menu_to_cart"
            app:destination="@id/CartFragment" />

        <action
            android:id="@+id/action_coffee_menu_to_about"
            app:destination="@id/AboutFragment" />

        <action
            android:id="@+id/action_coffee_menu_to_coffee_detail"
            app:destination="@id/CoffeeDetailFragment" />

    </fragment>

    <!-- О программе -->
    <fragment
        android:id="@+id/AboutFragment"
        android:name="com.example.coffeeshop.fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about">

        <action
            android:id="@+id/action_about_to_home"
            app:destination="@id/HomeFragment" />

        <action
            android:id="@+id/action_about_to_coffee_menu"
            app:destination="@id/CoffeeMenuFragment" />

        <action
            android:id="@+id/action_about_to_cart"
            app:destination="@id/CartFragment" />

    </fragment>

    <!-- Корзина -->
    <fragment
        android:id="@+id/CartFragment"
        android:name="com.example.coffeeshop.fragments.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart">

        <action
            android:id="@+id/action_cart_to_home"
            app:destination="@id/HomeFragment" />

        <action
            android:id="@+id/action_cart_to_coffee_menu"
            app:destination="@id/CoffeeMenuFragment" />

        <action
            android:id="@+id/action_cart_to_about"
            app:destination="@id/AboutFragment" />

    </fragment>

    <!-- Детальный просмотр кофе -->
    <fragment
        android:id="@+id/CoffeeDetailFragment"
        android:name="com.example.coffeeshop.fragments.CoffeeDetailFragment"
        android:label="Детали"
        tools:layout="@layout/fragment_coffee_detail">

        <action
            android:id="@+id/action_coffee_detail_to_coffee_menu"
            app:destination="@id/CoffeeMenuFragment" />

        <action
            android:id="@+id/action_coffee_detail_to_cart"
            app:destination="@id/CartFragment" />

    </fragment>

</navigation>